feat(encoding): reencode index5 series to utf-8

--- a/print5212.html
+++ b/print5212.html
@@ -2,7 +2,7 @@
 <title>Программирование успешного поведения</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=B245CC8D-F42C7-BCA8A1AF by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:01 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Предстоит важная встреча? Программируем свое поведение на успешный результат. 1-я и 2-я позиции восприятия.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
