--- a/print55bc.html
+++ b/print55bc.html
@@ -2,7 +2,7 @@
 <title>Эмоциональный интеллект</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C8979B8F-F437C-B817A252 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:01 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Вопреки расхожему мнению, высокие показатели IQ совсем не являются гарантией карьерного успеха...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
