--- a/print59df.html
+++ b/print59df.html
@@ -2,7 +2,7 @@
 <title>Загрузите мне его прямо в голову!</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A93 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:53 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Почему DVD-тренинг за 500$ в 100 раз выгоднее книги за 50$?  Что находят в DVD-тренингах сотни людей, которые уже не первый год их у нас покупают? ...Казалось бы, можно узнать ту же информацию в интернете или из книг. Так зачем же платить в несколько раз больше за видео-тренинг?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
