--- a/print5a7d.html
+++ b/print5a7d.html
@@ -2,7 +2,7 @@
 <title>Мужчина и женщина</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=401DAD9C-F46D3-E86A6238 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:12:18 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Материалы, посвященные отношениям между мужчиной и женщиной.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
