--- a/index5585.html
+++ b/index5585.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="4 этапа развития бизнесмена:  как нужно изменить свое мышление, чтобы выйти на новый уровень в бизнесе. Задавались ли Вы когда-нибудь вопросом: «Почему я столько всего изучаю, а изменения в жизни происходят очень медленно?» Особенно досадно, когда Вы видите как кто-то, кто начал позже Вас, растет намного быстрее...  Ну или, может, Вы не считаете, что развиваетесь медленно. Но точно знаете, что могли бы расти значительно быстрее! Как будто где-то в голове нужно найти рычаг, чтобы переключиться на следующую передачу..." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
