--- a/print50d2.html
+++ b/print50d2.html
@@ -2,7 +2,7 @@
 <title>Сказка про креативного менеджера</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4792 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:37 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='креативный'>
 <meta name="description" content='Между прочим, такое может случится с каждым... и любой будет тому очень рад! ;)'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
