--- a/print51ab.html
+++ b/print51ab.html
@@ -1,10 +1,10 @@
 <html>
-<title>Êàê è Äóøó ñîõðàíèòü, è äåíüãè ïîëó÷èòü?</title>
+<title>Как и Душу сохранить, и деньги получить?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AFB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:30 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Êàê è Äóøó ñîõðàíèòü, è äåíüãè ïîëó÷èòü?'>
-<meta name="description" content='Ïî÷åìó òðåíåðû ïðåâðàùàþòñÿ â «ñòàíêè».'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Как и Душу сохранить, и деньги получить?'>
+<meta name="description" content='Почему тренеры превращаются в «станки».'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,32 +14,32 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Êàê è Äóøó ñîõðàíèòü, è äåíüãè ïîëó÷èòü?</h1><a href=index51ab.html?id=F4AFB class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Àíäðåé Ñîðîêèí îñòàâèë î÷åíü èíòåðåñíûé êîììåíòàðèé íà ñòàòüþ &laquo;<a href="index06c6.html?id=F4AFA">Ãëàâíàÿ îøèáêà òðåíåðîâ</a>&raquo;:<br />
-	<em>&laquo;À ñóùåñòâóåò åùå òàêàÿ îïàñíîñòü, êàê ïðîôåññèîíàëüíàÿ äåôîðìàöèÿ ëè÷íîñòè. Â ñëó÷àå ñ òðåíåðñòâîì îñîáî. Â ïðîäàâàåìûé ïðîäóêò çäåñü íàäî âêëàäûâàòü è âåðèòü áîëüøå, ÷åì ñêàæåì â ïðîäàâàåìóþ ìåáåëü èëè øîêîëàäíûå áàòîí÷èêè. È.... òðåíåð ïåðåñòàåò âèäåòü â ëþäÿõ ëþäåé, à âèäèò â ëó÷øåì ñëó÷àå - äåòåé íåðàçóìíûõ, êîòîðûõ ñòîèò íàó÷èòü æèòü â ñîîòâåòñòâèè ñî ñâîèì ïðåäñòàâëåíèåì è, â ñëó÷àå ìåíåå äîñòîéíîì - îâåö ñ êîòîðûõ íàäî íàñòðè÷ü ìàêñèìàëüíîå êîëè÷åñòâî øåðñòè è ïðèó÷èòü èõ õîäèòü ñòðè÷üñÿ â îäíî ìåñòî, ê îäíîìó òðåíåðó.<br />
-	È òîãäà ó Äåëà, ó Ïóòè òåðÿåòñÿ Äóøà è ýòî ñòàíîâèòñÿ âóëüãàðíûì áàáêîêîëî÷åíüåì èëè âðåìÿïðåïðîâîæäåíüåì.&raquo;</em><br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Как и Душу сохранить, и деньги получить?</h1><a href=index51ab.html?id=F4AFB class=slink>web-версия</a><p><span class='print'><p>
+	Андрей Сорокин оставил очень интересный комментарий на статью &laquo;<a href="index06c6.html?id=F4AFA">Главная ошибка тренеров</a>&raquo;:<br />
+	<em>&laquo;А существует еще такая опасность, как профессиональная деформация личности. В случае с тренерством особо. В продаваемый продукт здесь надо вкладывать и верить больше, чем скажем в продаваемую мебель или шоколадные батончики. И.... тренер перестает видеть в людях людей, а видит в лучшем случае - детей неразумных, которых стоит научить жить в соответствии со своим представлением и, в случае менее достойном - овец с которых надо настричь максимальное количество шерсти и приучить их ходить стричься в одно место, к одному тренеру.<br />
+	И тогда у Дела, у Пути теряется Душа и это становится вульгарным бабкоколоченьем или времяпрепровожденьем.&raquo;</em><br />
 	<br />
-	Äåéñòâèòåëüíî, ìíîãèå òðåíåðû äîñòèãàþò êàêîãî-òî óñïåõà è ñêàòûâàþòñÿ ê òàêîìó îòíîøåíèþ. Ïîòîìó ÷òî ýòî ïðîùå - íàëàäèë êîíâååð è ñòðèãè! Íî ñ ýòîãî ñàìîãî ìîìåíòà îíè (ýòè òðåíåðû) íà÷èíàþò ïðåâðàùàòüñÿ â ñòàíêè, à èõ æèçíü - â ðóòèíó. È ïî ôàêòó - ýòî íèôèãà íå ïðîùå&hellip;</p>
+	Действительно, многие тренеры достигают какого-то успеха и скатываются к такому отношению. Потому что это проще - наладил конвеер и стриги! Но с этого самого момента они (эти тренеры) начинают превращаться в станки, а их жизнь - в рутину. И по факту - это нифига не проще&hellip;</p>
 <h3>
-	À ÷òî íà ñàìîì äåëå ïðîùå?</h3>
+	А что на самом деле проще?</h3>
 <p>
-	Êîãäà â äåëî íå âëîæåíà äóøà&hellip;<br />
-	Íåò, äàâàéòå òàê: êîãäà â äåëî âëîæåíà äóøà, ìàñòåðó ìîæíî ïðîñòèòü èçúÿíû, ïîòîìó ÷òî ïëîä áóäåò æèâîé. À ýòî âñåãäà èíòåðåñíåå áëåñòÿùåé áàëâàíêè, âûõîäÿùåé èç ïîä èäåàëüíî çàòî÷åííîãî ñòàíêà.<br />
-	Íî âñå ìû ëþäè, è òàê ñëó÷àåòñÿ, ÷òî ñòàðîå íàì íàäîåäàåò. Áûâàëî?<br />
-	È ÷òî äåëàòü, åñëè êîãäà-òî âäîõíîâëÿþùèé íàñ òðåíèíã ñåãîäíÿ óæå íå ïð¸ò?<br />
-	Äà, êîíâååð íàëàæåí, òðåíèíã ïðîäàí, è êëèåíòû èäó&hellip; Íî Âàñ (òðåíåðà) óæå íå ïð¸ò. È åäèíñòâåííàÿ îòðàäà - ñîëèäíûé ãîíîðàð. Íó à åñëè îí åùå è íå ñîëèäíûé&hellip;</p>
+	Когда в дело не вложена душа&hellip;<br />
+	Нет, давайте так: когда в дело вложена душа, мастеру можно простить изъяны, потому что плод будет живой. А это всегда интереснее блестящей балванки, выходящей из под идеально заточенного станка.<br />
+	Но все мы люди, и так случается, что старое нам надоедает. Бывало?<br />
+	И что делать, если когда-то вдохновляющий нас тренинг сегодня уже не прёт?<br />
+	Да, конвеер налажен, тренинг продан, и клиенты иду&hellip; Но Вас (тренера) уже не прёт. И единственная отрада - солидный гонорар. Ну а если он еще и не солидный&hellip;</p>
 <h3>
-	Ïàññèâíûé äîõîä äëÿ òðåíåðà.</h3>
+	Пассивный доход для тренера.</h3>
 <p>
-	Ìîå ìíåíèå - íå íóæíî ìó÷èòüñÿ.<br />
-	Âîçüìèòå ýòîò ðàñêðó÷åííûé òðåíèíã è òóïî ïðîäàéòå åãî.<br />
-	Íó èëè óìíî îòôðàíøèçüòå ;)<br />
-	Íà êðàéíèé ñëó÷àé çàDVDèðóéòå åãî.<br />
-	Ïóñòü îí ïðèíîñèò Âàì ìåíüøå äåíåã, íî óæå ïàññèâíî. È Âû ñìîæåòå ñïîêîéíî ñîçäàòü íîâûé, êîòîðûé áóäåò Âàñ âäîõíîâëÿòü&hellip; È åñëè ïîæåëàåòå - ïîâòîðèòü ýòó öåïî÷êó ñíîâà è ñíîâà.<br />
+	Мое мнение - не нужно мучиться.<br />
+	Возьмите этот раскрученный тренинг и тупо продайте его.<br />
+	Ну или умно отфраншизьте ;)<br />
+	На крайний случай заDVDируйте его.<br />
+	Пусть он приносит Вам меньше денег, но уже пассивно. И Вы сможете спокойно создать новый, который будет Вас вдохновлять&hellip; И если пожелаете - повторить эту цепочку снова и снова.<br />
 	<br />
-	<strong>P.S.</strong> Òåïåðü ïîíèìàåòå åùå îäèí ïëþñ íàëè÷èÿ ëèíåéêè èç 3-4 òðåíèíãîâ? ;)<br />
+	<strong>P.S.</strong> Теперь понимаете еще один плюс наличия линейки из 3-4 тренингов? ;)<br />
 	<br />
-	×òî Âû äóìàåòå îá ýòîì âñåì? Ïîäåëèòåñü â êîììåíòàðèÿõ...</p>
+	Что Вы думаете об этом всем? Поделитесь в комментариях...</p>
 <p>
 	        <!-- VKontakte -->
         <script type="text/javascript" src="../vk.com/dist/public/api/openapi.7fd8db35650ba51a8f05c0269f8a1e87812b.js?95"></script>
@@ -107,22 +107,22 @@ var idcomments_post_url = 'F4AFB.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4AFB" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script></p>
-</span><p><a href=index51ab.html?id=F4AFB class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index51ab.html?id=F4AFB class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -183,7 +183,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -205,7 +205,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
