--- a/print5325.html
+++ b/print5325.html
@@ -2,7 +2,7 @@
 <title>Три валюты не считая денег</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=282B8268-F43A2-F49EE280 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:03 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Даже самым лучшим сотрудникам повышать зарплату до бесконечности невозможно, и в какой-то момент появляется риск, что другие компании могут переманить лучших сотрудников. Что можно сделать, чтобы удержать ценные кадры у себя в компании? Деньги, это не единственная ценность, которая нужна людям...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
