--- a/print5407.html
+++ b/print5407.html
@@ -2,7 +2,7 @@
 <title>Бизнес, маркетинг и продажи</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48A6 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:13:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Что Вы можете сделать уже сегодня, чтобы увеличить продажи и повысить эффективность своего бизнеса. Нет бизнеса? Узнайте, как вы можете открыть свой первый, гарантированно успешный бизнес!'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
