--- a/print54d1.html
+++ b/print54d1.html
@@ -2,7 +2,7 @@
 <title>Что такое Новый Код НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=A62363D8-F42A8-FB94F979 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:29:33 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Основное отличие Нового Кода НЛП в том, что производимые изменения совершаются с помощью бессознательного.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
