--- a/print55f5.html
+++ b/print55f5.html
@@ -2,7 +2,7 @@
 <title>Энергетический потенциал человека</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8ED26061-F4701-39B5C027 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:51 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='чакра'>
 <meta name="description" content='Максимально используя свои способности, которые лежат в зоне нашего потенциала, мы достигаем успеха легко и естественно, затрачивая минимум усилий и получая удовольствие от процесса.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
