--- a/print599e.html
+++ b/print599e.html
@@ -2,7 +2,7 @@
 <title>Нео-Лидерство: смена информационных эпох</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8DF2E099-F464C-5D29FA43 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:48 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Глобальные перемены. Новые условия успеха.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
