--- a/print5ae6.html
+++ b/print5ae6.html
@@ -2,7 +2,7 @@
 <title>3 переходные проблемы развития бизнеса</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A7B by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:13 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Низкая эффективность, проблемы с людьми и слишком высокие расходы.  Как решения дает нам Спиральная Динамика?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
