--- a/print5bd1.html
+++ b/print5bd1.html
@@ -2,7 +2,7 @@
 <title>Базовые факторы успешного маркетинга</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A29 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:03:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Без чего не обойтись в построении прибыльного бизнеса? Речь пойдет не только о новичках в малом бизнесе...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
