--- a/print5bd9.html
+++ b/print5bd9.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ìåòà-ñèñòåìíîå âèäåíèå</title>
+<title>Мета-системное видение</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=EF55077A-F45BC-9F9EDC1A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:44 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íîâûé êîä íëï, íëï'>
-<meta name="description" content='Øàãè òåõíèêè.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='новый код нлп, нлп'>
+<meta name="description" content='Шаги техники.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,23 +14,23 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ìåòà-ñèñòåìíîå âèäåíèå</h1><a href=index5bd9.html?id=EF55077A-F45BC-9F9EDC1A class=slink>web-âåðñèÿ</a><p><span class='print'><p align="left">Ïîñëåäíåå îáíîâëåíèå: 17.01.2007 ã.</p>
-<p align="right"><em>&quot;Çíàë áû ïðèêóï, æèë áû â Ñî÷è.&quot;</em></p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Мета-системное видение</h1><a href=index5bd9.html?id=EF55077A-F45BC-9F9EDC1A class=slink>web-версия</a><p><span class='print'><p align="left">Последнее обновление: 17.01.2007 г.</p>
+<p align="right"><em>&quot;Знал бы прикуп, жил бы в Сочи.&quot;</em></p>
 <p><br />
-Òåõíèêà ñëóæèò äëÿ ïîëó÷åíèÿ ìíîãîóðîâíåãî è ìíîãîìåðíîãî âèäåíèÿ êàêîãî ëèáî êîíòåêñòà/ñèòóàöèè/âîïðîñà. Ïðàâèëüíîå âûïîëíåíèå ýòîé òåõíèêè íåñêîëüêî ðàç ïîçâîëÿåò âñòðîèòü ïàòòåðí õîëèñòè÷åñêîãî ìûøëåíèÿ (ìíîãîóðîâíåãî âèäåíèÿ-÷óâñòâîâàíèÿ ìàêðîñèñòåì). Äëÿ óñïåøíîãî âûïîëíåíèÿ òåõíèêè íåîáõîäèì íàâûê âõîäà â High Performance State.</p>
-<p>1. Îïðåäåëèòå ðàìêó êîíòåêñòà (îïèøèòå ñèòóàöèþ/ñôîðìóëèðóéòå âîïðîñ). Ñäåëàéòå ýòî ìàêñèìàëüíî òî÷íî, æåëàòåëüíî âèçóàëüíî è âåðáàëüíî.</p>
-<p>2. Îïðåäåëèòå íàèìåíüøóþ ñèñòåìó (ÍÑ) - òó, â êîòîðîé âîçíèê âîïðîñ, è çàòåì ïðåäåëüíóþ îñîçíàâàåìóþ âàìè ñèñòåìó (ÏÎÑ). Íàïðèìåð: &quot;ß&quot; è &quot;Ìèð&quot;. Ðàçìàðêèðóéòå â ïðîñòðàíñòâå ìåñòà äëÿ íèõ, êàê äâå òî÷êè îäíîãî îòðåçêà.</p>
-<p>3. Àññîöèèðóéòåñü ñíà÷àëà ñ ÍÑ, çàòåì ñ ÏÎÑ è, áóäó÷è àññîöèèðîâàííûì ñ ÏÎÑ îùóòèòå, ÷òî âû ÿâëÿåòåñü îäíîâðåìåííî è òîé è äðóãîé ñèñòåìîé. Çàòåì ñíîâà âåðíèòåñü â ïðîñòðàíñòâî ÍÑ è àññîöèèðóéòåñü ñ íåé. Âñòàíüòå ñïèíîé ê ÏÎÑ è àêòóàëèçèðóéòå ðàìêó êîíòåêñòà (âñïîìíèòå, î ÷åì ýòî âû òóò ìåäèòèðóåòå :)).</p>
-<p>4. Ñäåëàâ øàã íàçàä, äèññîöèèðóéòåñü îò ìåíüøåé ñèñòåìû. Ãëÿäÿ íà ÍÑ ñî ñòîðîíû, ïîñìîòðèòå, êàêèå åùå åñòü ñèñòåìû ðÿäîì ñ ÍÑ òîãî æå ìàñøòàáà/óðîâíÿ. Íàçîâèòå èõ è îáîçíà÷üòå â ïðîñòðàíñòâå äëÿ íàãëÿäíîñòè.</p>
-<p>5. Ãëÿäÿ íà âñå ëåæàùèå ïåðåä âàìè ñèñòåìû, àññîöèèðóéòåñü ñ íèìè âñåìè ñðàçó è ñïðîñèòå ó áåññîçíàòåëüíîãî: â êàêîé ñèñòåìå âû íàõîäèòåñü òåïåðü (÷òî ýòî çà ñèñòåìà, êîòîðîé âû ÿâëÿåòåñü òåïåðü)? Ïðè íåîáõîäèìîñòè ïîêèíüòå ïðîñòðàíñòâî, âîéäèòå â HPS, âåðíèòåñü è ïîëó÷èòå îòâåò íà âîïðîñ.</p>
-<p>6. Îïðåäåëèòå ïåòëè âçàèìîñâÿçè ìåæäó âàìè (ìàòåðèíñêîé ñèñòåìîé) è âàøèìè ýëåìåíòàìè: Ïîñìîòðèòå íà ÍÑ, êàê íà ÷àñòü ñåáÿ, è îïðåäåëèòå, êàêóþ ôóíêöèþ/ðîëü îíà âûïîëíÿåò âíóòðè âàñ, êàê áîëüøåé ñèñòåìû, êàê âàø ýëåìåíò. Îïðåäåëèòå, ÷òî âû åé äàåòå/îáåñïå÷èâàåòå äëÿ ýòîãî, êàê ìàòåðèíñêàÿ ñèñòåìà.</p>
-<p>7. Ïîâòîðèòå øàãè 4-6 ïîêà íå äîéäåòå äî ÏÎÑ. Çàòåì íà÷íèòå äâèãàòüñÿ âíèç, îò áîëüøèõ ñèñòåì ê ìåíüøèì, ïîëó÷àÿ óòî÷íåíèÿ è íîâûå îòâåòû íà âîïðîñû. Ïðè íåîáõîäèìîñòè ìîæíî âîçâðàùàòüñÿ íà ïðåäûäóùèå ñèñòåìíûå óðîâíè, íî ïåðåõîäÿ ñòðîãî ÷åðåç âñþ ïîñëåäîâàòåëüíîñòü âëîæåííûõ ñèñòåì (íå ïåðåñêàêèâàÿ).</p>
-<p>8. (Îïöèîíàëüíî) Ïîñìîòðèòå, êàê ïîñòðîåííûé âàìè îðãàíèçì áóäåò ðàçâèâàòüñÿ âî âðåìåíè íà êàæäîì ñâîåì óðîâíå - ÷òî ãäå èçìåíèòñÿ è êàê.</p>
+Техника служит для получения многоуровнего и многомерного видения какого либо контекста/ситуации/вопроса. Правильное выполнение этой техники несколько раз позволяет встроить паттерн холистического мышления (многоуровнего видения-чувствования макросистем). Для успешного выполнения техники необходим навык входа в High Performance State.</p>
+<p>1. Определите рамку контекста (опишите ситуацию/сформулируйте вопрос). Сделайте это максимально точно, желательно визуально и вербально.</p>
+<p>2. Определите наименьшую систему (НС) - ту, в которой возник вопрос, и затем предельную осознаваемую вами систему (ПОС). Например: &quot;Я&quot; и &quot;Мир&quot;. Размаркируйте в пространстве места для них, как две точки одного отрезка.</p>
+<p>3. Ассоциируйтесь сначала с НС, затем с ПОС и, будучи ассоциированным с ПОС ощутите, что вы являетесь одновременно и той и другой системой. Затем снова вернитесь в пространство НС и ассоциируйтесь с ней. Встаньте спиной к ПОС и актуализируйте рамку контекста (вспомните, о чем это вы тут медитируете :)).</p>
+<p>4. Сделав шаг назад, диссоциируйтесь от меньшей системы. Глядя на НС со стороны, посмотрите, какие еще есть системы рядом с НС того же масштаба/уровня. Назовите их и обозначьте в пространстве для наглядности.</p>
+<p>5. Глядя на все лежащие перед вами системы, ассоциируйтесь с ними всеми сразу и спросите у бессознательного: в какой системе вы находитесь теперь (что это за система, которой вы являетесь теперь)? При необходимости покиньте пространство, войдите в HPS, вернитесь и получите ответ на вопрос.</p>
+<p>6. Определите петли взаимосвязи между вами (материнской системой) и вашими элементами: Посмотрите на НС, как на часть себя, и определите, какую функцию/роль она выполняет внутри вас, как большей системы, как ваш элемент. Определите, что вы ей даете/обеспечиваете для этого, как материнская система.</p>
+<p>7. Повторите шаги 4-6 пока не дойдете до ПОС. Затем начните двигаться вниз, от больших систем к меньшим, получая уточнения и новые ответы на вопросы. При необходимости можно возвращаться на предыдущие системные уровни, но переходя строго через всю последовательность вложенных систем (не перескакивая).</p>
+<p>8. (Опционально) Посмотрите, как построенный вами организм будет развиваться во времени на каждом своем уровне - что где изменится и как.</p>
 <p>&nbsp;</p>
-<p align="right"><em>Áóëûãèí Åãîð,<br />
-</em><em>(ñ) Ëàáîðàòîðèÿ ÍåîÊîäà</em></p>
+<p align="right"><em>Булыгин Егор,<br />
+</em><em>(с) Лаборатория НеоКода</em></p>
 <p align="right"><em><font size="1">17.11.2006<br />
-ïîñëåäíåå îáíîâëåíèå: 17.01.2007</font></em></p>
+последнее обновление: 17.01.2007</font></em></p>
 <p align="center"><font size="2" face="Verdana"><a name='vote'></a><script type='text/javascript'>
 function light(num){
     if(num >= 1) document.getElementById('star1').className = 'active';
@@ -53,16 +53,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupd795.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup0c57.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup6872.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5fc9.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5391.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupd795.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0c57.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup6872.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5fc9.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5391.html?id=EF55077A-F45BC-9F9EDC1A&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -85,12 +85,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Ñèñòåìíàÿ ðàáîòà ñ öåëÿìè&quot;</p> <ul><li><a href='C46664D1-F45AF-434EA0C4.html' title='Øàãè òåõíèêè.'>Ìåòà-ñèñòåìíûå óðîâíè äëÿ ðåàëèçàöèè öåëåé</a></li><li><a href='EE42B048-F466C-394CC55A.html' title='Ïîøàãîâàÿ èíñòðóêöèÿ îïòèìèçàöèè ñèñòåìû.'>Ìåòîä Îïòèìèçàöèè Ñèñòåìíûõ Êîììóíèêàöèé (ÌÎÑÊ)</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Системная работа с целями&quot;</p> <ul><li><a href='C46664D1-F45AF-434EA0C4.html' title='Шаги техники.'>Мета-системные уровни для реализации целей</a></li><li><a href='EE42B048-F466C-394CC55A.html' title='Пошаговая инструкция оптимизации системы.'>Метод Оптимизации Системных Коммуникаций (МОСК)</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/EF55077A-F45BC-9F9EDC1A" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -113,13 +113,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </font></p>
-</span><p><a href=index5bd9.html?id=EF55077A-F45BC-9F9EDC1A class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index5bd9.html?id=EF55077A-F45BC-9F9EDC1A class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -180,7 +180,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -202,7 +202,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
