--- a/print5bf4.html
+++ b/print5bf4.html
@@ -1,10 +1,10 @@
 <html>
-<title>Íîâûé Êîä ÍËÏ</title>
+<title>Новый Код НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=3D5D634B-F42A7-4825A88E by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:56:30 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íîâûé êîä íëï'>
-<meta name="description" content='Ñòàòüè, òåõíèêè è êîíñïåêòû ïî Íîâîìó Êîäó ÍËÏ.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='новый код нлп'>
+<meta name="description" content='Статьи, техники и конспекты по Новому Коду НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,14 +14,14 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Íîâûé Êîä ÍËÏ</h1><a href=index5bf4.html?id=3D5D634B-F42A7-4825A88E class=slink>web-âåðñèÿ</a><p><span class='print'><P><ul><li><h2><a href='8015EE36-F4485-09664AAE.html'>Î Íîâîì Êîäå ÍËÏ</a></h2>×òî òàêîå Íîâûé Êîä ÍËÏ è ÷òî òàêîå Èãðû Íîâîãî Êîäà ÍËÏ.</li><li><h2><a href='A9C0F6FD-F4483-7FB47D13.html'>Íîâûé Êîä ÍËÏ îò åãî îñíîâàòåëåé</a></h2>Âûäåðæêè èç ñåìèíàðîâ Äæîíà Ãðèíäåðà è Äæóäèò Äåëîçüå.</li><li><h2><a href='2C4D18A7-F45E1-65DD8717.html'>Áàçîâûå òåõíîëîãèè Íîâîãî Êîäà ÍËÏ</a></h2>Òåõíîëîãèè Íîâîãî Êîäà ÍËÏ, ïðèâåçåííûå Äæîíîì Ãðèíäåðîì â Ìîñêâó â 2004 ãîäó, è èõ ýâîëþöèîííîå ïðîäîëæåíèå.</li><li><h2><a href='ED6DD7F4-F4484-387E55A2.html'>Ñîâðåìåííûå êîíöåïöèè Íîâîãî Êîäà ÍËÏ</a></h2>Íîâåéøèé Íîâûé Êîä ÍËÏ. Ìàòåðèàëû, êîòîðûå ñîçäàþòñÿ ñåé÷àñ â Ëàáîðàòîðèè ÍåîÊîäà.</li></ul> 
-</span><p><a href=index5bf4.html?id=3D5D634B-F42A7-4825A88E class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Новый Код НЛП</h1><a href=index5bf4.html?id=3D5D634B-F42A7-4825A88E class=slink>web-версия</a><p><span class='print'><P><ul><li><h2><a href='8015EE36-F4485-09664AAE.html'>О Новом Коде НЛП</a></h2>Что такое Новый Код НЛП и что такое Игры Нового Кода НЛП.</li><li><h2><a href='A9C0F6FD-F4483-7FB47D13.html'>Новый Код НЛП от его основателей</a></h2>Выдержки из семинаров Джона Гриндера и Джудит Делозье.</li><li><h2><a href='2C4D18A7-F45E1-65DD8717.html'>Базовые технологии Нового Кода НЛП</a></h2>Технологии Нового Кода НЛП, привезенные Джоном Гриндером в Москву в 2004 году, и их эволюционное продолжение.</li><li><h2><a href='ED6DD7F4-F4484-387E55A2.html'>Современные концепции Нового Кода НЛП</a></h2>Новейший Новый Код НЛП. Материалы, которые создаются сейчас в Лаборатории НеоКода.</li></ul> 
+</span><p><a href=index5bf4.html?id=3D5D634B-F42A7-4825A88E class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -82,7 +82,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -104,7 +104,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
