--- a/print5c9c.html
+++ b/print5c9c.html
@@ -1,10 +1,10 @@
 <html>
-<title>Åãîð Áóëûãèí</title>
+<title>Егор Булыгин</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=DA048280-F434C-05FECECD by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:07:34 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íëï, òðåíåð, Åãîð Ñåðãååâè÷ Áóëûãèí'>
-<meta name="description" content='Åãîð Ñåðãååâè÷ Áóëûãèí. M.A. NLP,  ñåðòèôèöèðîâàííûé êîó÷, ñåðòèôèöèðîâàííûé òðåíåð ÍËÏ (Ìåæäóíàðîäíûé Ýðèêñîíîâñêèé Óíèâåðñèòåò, Êàíàäà), ñïåöèàëèñò ïî Ýðèêñîíîâñêîìó ãèïíîçó (Ì.Ð. Ãèíçáóðã), ïðàêòèê ×æóíü Þàíü Öèãóí (Ñþé Ìèíòàí).'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='нлп, тренер, Егор Сергеевич Булыгин'>
+<meta name="description" content='Егор Сергеевич Булыгин. M.A. NLP,  сертифицированный коуч, сертифицированный тренер НЛП (Международный Эриксоновский Университет, Канада), специалист по Эриксоновскому гипнозу (М.Р. Гинзбург), практик Чжунь Юань Цигун (Сюй Минтан).'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,41 +14,41 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Åãîð Áóëûãèí</h1><a href=index5c9c.html?id=DA048280-F434C-05FECECD class=slink>web-âåðñèÿ</a><p><span class='print'><div style="text-align: center;"><img alt="Åãîð Áóëûãèí" src="img/photo/Egor_2011_red_big.jpg" style="font-size: 14px; text-indent: 0em; text-align: left; margin-right: 20px; float: left; width: 250px; height: 194px;" /></div>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Егор Булыгин</h1><a href=index5c9c.html?id=DA048280-F434C-05FECECD class=slink>web-версия</a><p><span class='print'><div style="text-align: center;"><img alt="Егор Булыгин" src="img/photo/Egor_2011_red_big.jpg" style="font-size: 14px; text-indent: 0em; text-align: left; margin-right: 20px; float: left; width: 250px; height: 194px;" /></div>
 
-<p>Åãîð Áóëûãèí (Ìîñêâà, 1977 ã.ð.)</p>
+<p>Егор Булыгин (Москва, 1977 г.р.)</p>
 
-<p>M.A. NLP,&nbsp; ñåðòèôèöèðîâàííûé êîó÷, ñåðòèôèöèðîâàííûé òðåíåð ÍËÏ (Ìåæäóíàðîäíûé Ýðèêñîíîâñêèé Óíèâåðñèòåò, Êàíàäà), ñïåöèàëèñò ïî Ýðèêñîíîâñêîìó ãèïíîçó (Ì.Ð. Ãèíçáóðã), ïðàêòèê ×æóíü Þàíü Öèãóí (Ñþé Ìèíòàí).</p>
+<p>M.A. NLP,&nbsp; сертифицированный коуч, сертифицированный тренер НЛП (Международный Эриксоновский Университет, Канада), специалист по Эриксоновскому гипнозу (М.Р. Гинзбург), практик Чжунь Юань Цигун (Сюй Минтан).</p>
 
-<p>ßâëÿþñü àâòîðîì ìíîãèõ òðåíèíãîâ, âåáèíàðîâ, îíëàéí êóðñîâ è ñòàòåé, ïðåäñòàâëåííûõ íà ñàéòå NLPING.ru. À òàêæå àâòîðîì êíèãè<strong> &quot;</strong><a href="http://www.postbook.ru/detail.php?id=2237&amp;currKey=M6ms1VXdqEYBlHMljT4B2Nbr" target="_blank"><strong>ÍËÏ êàê îíî åñòü. Ïðàêòèêà óñïåõà.</strong></a><strong>&quot;</strong></p>
+<p>Являюсь автором многих тренингов, вебинаров, онлайн курсов и статей, представленных на сайте NLPING.ru. А также автором книги<strong> &quot;</strong><a href="http://www.postbook.ru/detail.php?id=2237&amp;currKey=M6ms1VXdqEYBlHMljT4B2Nbr" target="_blank"><strong>НЛП как оно есть. Практика успеха.</strong></a><strong>&quot;</strong></p>
 
-<p>Îáó÷àëñÿ ÍËÏ ó Äæîíà Ãðèíäåðà, Ôðýíêà Ïüþñåëèêà, Ìåðèëèí Àòêèíñîí è ìíîãèõ äðóãèõ èçâåñòíûõ òðåíåðîâ. Ñïèðàëüíîé Äèíàìèêå îáó÷àëñÿ ó Äîíà Áåêà è Êðèñà Êîâàíà.<br />
+<p>Обучался НЛП у Джона Гриндера, Фрэнка Пьюселика, Мерилин Аткинсон и многих других известных тренеров. Спиральной Динамике обучался у Дона Бека и Криса Кована.<br />
 <br />
-Çàíèìàþñü ÍËÏ ñ 2000 ãîäà, âåäó òðåíèíãè è ïåðñîíàëüíûé êîó÷èíã ñ 2003 ãîäà.</p>
+Занимаюсь НЛП с 2000 года, веду тренинги и персональный коучинг с 2003 года.</p>
 
-<p>Äëÿ ñåáÿ ïðàêòèêóþ ìåäèòàöèþ ñ 1992 ãîäà, â 1998 ãîäó îñâîèë ïðîäâèíóòûé êóðñ ÒÌ-Ñèääõè, â 2003 ïðîøåë êóðñ ×æóí Þàíü Öèãóí ó ìàñòåðà Ñþé Ìèíòàíà.</p>
+<p>Для себя практикую медитацию с 1992 года, в 1998 году освоил продвинутый курс ТМ-Сиддхи, в 2003 прошел курс Чжун Юань Цигун у мастера Сюй Минтана.</p>
 
 <p></p>
 
 <p><br />
-Ïðîâîäèë òðåíèíãè â ñëåäóþùèõ ãîðîäàõ: Ìîñêâà, Ñàíêò-Ïåòåðáóðã, Ñîôèÿ, Êèåâ, Ìèíñê, Íîâîñèáèðñê, Òîëüÿòòè, Ñàìàðà, Êàçàíü, Âèòåáñê. <a href="index791a.html?id=F05E6200-F45A7-0A75F0C1" target="_blank"><strong>Îòçûâû</strong></a>.</p>
+Проводил тренинги в следующих городах: Москва, Санкт-Петербург, София, Киев, Минск, Новосибирск, Тольятти, Самара, Казань, Витебск. <a href="index791a.html?id=F05E6200-F45A7-0A75F0C1" target="_blank"><strong>Отзывы</strong></a>.</p>
 
 <h2 style="text-align: center;"><iframe allowfullscreen="" frameborder="0" height="338" scrolling="no" src="http://www.youtube.com/embed/ou4p4jjFb60?rel=0" width="600"></iframe></h2>
 
-<h2>Òðåíåðñêàÿ ñïåöèàëèçàöèÿ</h2>
+<h2>Тренерская специализация</h2>
 
 <ul>
-	<li>Óïðàâëåíèå ýìîöèîíàëüíûì ñîñòîÿíèåì, ðàáîòà ñ áåññîçíàòåëüíûì (Íîâûé êîä ÍËÏ, Ýðèêñîíîâñêèé ãèïíîç, ÍËÏ 3-ãî ïîêîëåíèÿ)</li>
-	<li>Ëèäåðñòâî è êîììóíèêàöèÿ (Ñïèðàëüíàÿ äèíàìèêà, ÍËÏ, óïðàâëåíèå â ñòèëå êîó÷èíãà)</li>
-	<li>Ðàáîòà ñ âûñøèìè ñîñòîÿíèÿìè ñîçíàíèÿ è äóõîâíûå ïðàêòèêè (öèãóí, éîãà, ìåäèòàöèÿ)</li>
-	<li>Ïðîäàþùèå âûñòóïëåíèÿ (äëÿ òðåíåðîâ, ïðåäïðèíèìàòåëåé è ðóêîâîäèòåëåé)</li>
-	<li>Îáó÷åíèå òðåíåðîâ: ñîçäàíèå òðàíñôîðìàöèîííûõ òðåíèíãîâ, âåäåíèå è ïðîäàæà òðåíèíãîâ.<br />
+	<li>Управление эмоциональным состоянием, работа с бессознательным (Новый код НЛП, Эриксоновский гипноз, НЛП 3-го поколения)</li>
+	<li>Лидерство и коммуникация (Спиральная динамика, НЛП, управление в стиле коучинга)</li>
+	<li>Работа с высшими состояниями сознания и духовные практики (цигун, йога, медитация)</li>
+	<li>Продающие выступления (для тренеров, предпринимателей и руководителей)</li>
+	<li>Обучение тренеров: создание трансформационных тренингов, ведение и продажа тренингов.<br />
 	&nbsp; &nbsp;<span class="normal"> </span></li>
 </ul>
 
 <p><a name="episode"></a></p>
 
-<p style="text-align: center;"><strong>Âûñøèå óðîâíè ëèäåðñòâà &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;<a href="index5f85.html?id=DA048280-F434C-05FECECD&amp;ep=2">Ìàñòåð-êëàññ &quot;Äåíüãè - âûõîä íà íîâûé óðîâåíü&quot;</a> </strong></p>
+<p style="text-align: center;"><strong>Высшие уровни лидерства &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;<a href="index5f85.html?id=DA048280-F434C-05FECECD&amp;ep=2">Мастер-класс &quot;Деньги - выход на новый уровень&quot;</a> </strong></p>
 
 <p style="text-align: center;"><iframe allowfullscreen="" frameborder="0" height="315" src="http://www.youtube.com/embed/N0ryCTbXBPI" width="560"></iframe></p>
 
@@ -56,67 +56,67 @@ body {
 
 <p></p>
 
-<h2 style="text-align: center; "><a href="F05E6200-F45A7-0A75F0C1.html">Îòçûâû ó÷àñòíèêîâ òðåíèíãîâ Åãîðà Áóëûãèíà</a></h2>
+<h2 style="text-align: center; "><a href="F05E6200-F45A7-0A75F0C1.html">Отзывы участников тренингов Егора Булыгина</a></h2>
 
-<p style="text-align: center; "><a href="trainings_photo_collection.html"><span style="font-size:20px;">Ôîòî ñ òðåíèíãîâ</span></a></p>
+<p style="text-align: center; "><a href="trainings_photo_collection.html"><span style="font-size:20px;">Фото с тренингов</span></a></p>
 
-<h2>Ñåðòèôèêàöèîííîå îáðàçîâàíèå: ÍËÏ è ãèïíîç (2000 - 2003)</h2>
+<h2>Сертификационное образование: НЛП и гипноз (2000 - 2003)</h2>
 
-<p><strong>Êóðñ &quot;ÍËÏ-Ìàñòåð&quot;</strong> (Öåíòð ÍËÏ â îáðàçîâàíèè): Àíäðåé Ïëèãèí, Àëåêñàíäð Ãåðàñèìîâ,<br />
-<strong>Êóðñ &quot;ÍËÏ-Ìàñòåð&quot;</strong> (Ìîñêîâñêèé Öåíòð ÍËÏ): Òàòüÿíà Ìóæèöêàÿ, Àíäðåé Ê¸íèã, Âÿ÷åñëàâ Çàõàðîâ.</p>
+<p><strong>Курс &quot;НЛП-Мастер&quot;</strong> (Центр НЛП в образовании): Андрей Плигин, Александр Герасимов,<br />
+<strong>Курс &quot;НЛП-Мастер&quot;</strong> (Московский Центр НЛП): Татьяна Мужицкая, Андрей Кёниг, Вячеслав Захаров.</p>
 
-<p><strong>Êóðñ &quot;ÍËÏ-Ïðàêòèê&quot;:</strong> Òàòüÿíà Ìóæèöêàÿ, Àíäðåé Ê¸íèã, Âÿ÷åñëàâ Çàõàðîâ, Ñåðãåé Âåðåâêèí, Àíäðåé Ïëèãèí, Àëåêñàíäð Ãåðàñèìîâ.</p>
+<p><strong>Курс &quot;НЛП-Практик&quot;:</strong> Татьяна Мужицкая, Андрей Кёниг, Вячеслав Захаров, Сергей Веревкин, Андрей Плигин, Александр Герасимов.</p>
 
-<p><strong>Êóðñ &quot;Ýðèêñîíîâñêèé ãèïíîç&quot;:</strong> Ìèõàèë Ãèíçáóðã.</p>
+<p><strong>Курс &quot;Эриксоновский гипноз&quot;:</strong> Михаил Гинзбург.</p>
 
-<h2>Ñåðòèôèêàöèîííîå îáðàçîâàíèå: êîó÷ è òðåíåð (2003 - 2010)</h2>
+<h2>Сертификационное образование: коуч и тренер (2003 - 2010)</h2>
 
-<p style="text-indent: 0px; "><strong style="font-size: 14px; ">Êóðñ &quot;ÍËÏ-Òðåíåð&quot;&nbsp;</strong>(Ìîñêîâñêèé Öåíòð ÍËÏ): Ôðýíê Ïüþñåëèê, Àíäðåé Ê¸íèã, Òàòüÿíà Ìóæèöêàÿ, Àíäðåé Âèíîãðàäîâ, Åëåíà Êðÿíåâà, Êîíñòàíòèí Êîâàëåíîê, Íèíà Ãîëîñîâà, Ìèõàèë Ïåëåõàòûé, Ñåðãåé Ãîðèí.</p>
+<p style="text-indent: 0px; "><strong style="font-size: 14px; ">Курс &quot;НЛП-Тренер&quot;&nbsp;</strong>(Московский Центр НЛП): Фрэнк Пьюселик, Андрей Кёниг, Татьяна Мужицкая, Андрей Виноградов, Елена Крянева, Константин Коваленок, Нина Голосова, Михаил Пелехатый, Сергей Горин.</p>
 
-<p style="text-indent: 0px; "><strong style="font-size: 14px; ">Êóðñ &quot;ÍËÏ-Òðåíåð&quot;&nbsp;</strong>(Ìåæäóíàðîäíûé Ýðèêñîíîâñêèé Óíèâåðñèòåò): Ìåðèëèí Àòêèíñîí.</p>
+<p style="text-indent: 0px; "><strong style="font-size: 14px; ">Курс &quot;НЛП-Тренер&quot;&nbsp;</strong>(Международный Эриксоновский Университет): Мерилин Аткинсон.</p>
 
-<p style="text-indent: 0px; "><strong style="font-size: 14px; background-color: rgb(255, 255, 255); ">Êóðñ &quot;Íàóêà è èñêóññòâî òðàíñôîðìàöèîííîãî êîó÷èíãà&quot;</strong><span style="font-size: 14px; background-color: rgb(255, 255, 255); ">&nbsp;(Ìåæäóíàðîäíûé Ýðèêñîíîâñêèé Óíèâåðñèòåò): Ìåðèëèí Àòêèíñîí, Àííà Ëåáåäåâà, Ìàêñèì Îøóðêîâ.</span></p>
+<p style="text-indent: 0px; "><strong style="font-size: 14px; background-color: rgb(255, 255, 255); ">Курс &quot;Наука и искусство трансформационного коучинга&quot;</strong><span style="font-size: 14px; background-color: rgb(255, 255, 255); ">&nbsp;(Международный Эриксоновский Университет): Мерилин Аткинсон, Анна Лебедева, Максим Ошурков.</span></p>
 
-<h2>Ïðîôèëüíûå òðåíèíãè è ñåìèíàðû (2004 - 2012)</h2>
+<h2>Профильные тренинги и семинары (2004 - 2012)</h2>
 
-<p><strong>Íîâûé Êîä ÍËÏ: </strong>Äæîí Ãðèíäåð, Êàðìåí Áîñòèê.</p>
+<p><strong>Новый Код НЛП: </strong>Джон Гриндер, Кармен Бостик.</p>
 
-<p><strong>Ñïèðàëüíàÿ Äèíàìèêà:</strong> Äîí Áåê<br />
-<strong>Ñïèðàëüíàÿ Äèíàìèêà:</strong> Êðèñ Êîâàí, Íàòàëüÿ Òîäîðîâè÷</p>
+<p><strong>Спиральная Динамика:</strong> Дон Бек<br />
+<strong>Спиральная Динамика:</strong> Крис Кован, Наталья Тодорович</p>
 
-<p><strong>Ãëóáèííûé êîó÷èíã:</strong> Ìåðèëèí Àòêèíñîí</p>
+<p><strong>Глубинный коучинг:</strong> Мерилин Аткинсон</p>
 
-<p><strong>Êîìàíäíûé êîó÷èíã:</strong> Àííà Ëåáåäåâà</p>
+<p><strong>Командный коучинг:</strong> Анна Лебедева</p>
 
-<p><strong>Ýííåàãðàììû: </strong>Ìåðèëèí Àòêèíñîí</p>
+<p><strong>Эннеаграммы: </strong>Мерилин Аткинсон</p>
 
-<p><strong>Ýðèêñîíîâñêèé ãèïíîç:&nbsp;</strong>Ñåðãåé Ãîðèí.</p>
+<p><strong>Эриксоновский гипноз:&nbsp;</strong>Сергей Горин.</p>
 
-<p><strong>Òåðàïåâòè÷åñêèå ìåòàôîðû (ÍËÏ):</strong> Ôðýíê Ïüþñåëèê.</p>
+<p><strong>Терапевтические метафоры (НЛП):</strong> Фрэнк Пьюселик.</p>
 
-<p><strong>Ìåòà-ìîäåëü (ÍËÏ):</strong> Ôðýíê Ïüþñåëèê.</p>
+<p><strong>Мета-модель (НЛП):</strong> Фрэнк Пьюселик.</p>
 
-<p><strong>Äóõîâíûé ðîñò â áèçíåñå:</strong> Ìàðê Ïàëü÷èê</p>
+<p><strong>Духовный рост в бизнесе:</strong> Марк Пальчик</p>
 
-<p><strong>Ïðîäàæè ñî ñöåíû:</strong> Àíäðåé Ïàðàáåëëóì, Ïåòð Îñèïîâ</p>
+<p><strong>Продажи со сцены:</strong> Андрей Парабеллум, Петр Осипов</p>
 
-<p><strong>Èíôîìàðêåòèíã:</strong> Ôðýíê Êåðí</p>
+<p><strong>Инфомаркетинг:</strong> Фрэнк Керн</p>
 
-<h2>Äóõîâíûå ïðàêòèêè (1992 - 2003)</h2>
+<h2>Духовные практики (1992 - 2003)</h2>
 
-<p><strong>Öèãóí</strong> (4 ñòóïåíè): Ñþé Ìèíòàí.</p>
+<p><strong>Цигун</strong> (4 ступени): Сюй Минтан.</p>
 
-<p><strong>ÒÌ-Ñèääõè</strong>: Ìàõàðèøè Ìàõåø Éîãè.</p>
+<p><strong>ТМ-Сиддхи</strong>: Махариши Махеш Йоги.</p>
 
 <p><br />
-<b><span style="font-family: Verdana; font-size: small;">Êîíòàêòû:</span> </b><a href="#" onclick="jivo_api.open();return false;">Íàïèñàòü ïèñüìî</a></p>
-</span><p><a href=index5c9c.html?id=DA048280-F434C-05FECECD class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<b><span style="font-family: Verdana; font-size: small;">Контакты:</span> </b><a href="#" onclick="jivo_api.open();return false;">Написать письмо</a></p>
+</span><p><a href=index5c9c.html?id=DA048280-F434C-05FECECD class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -177,7 +177,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -199,7 +199,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
