--- a/print5d1c.html
+++ b/print5d1c.html
@@ -2,7 +2,7 @@
 <title>Неформальные лидеры - в чем их сила?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=1F86A354-F42AD-D96C01F8 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Чем неформальные лидеры отличаются от других людей - что делает их таковыми.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
