--- a/print5d1f.html
+++ b/print5d1f.html
@@ -2,7 +2,7 @@
 <title>Спиральная Динамика Грейвза. Принципы Спиральной Динамики.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=11BD560D-F45FE-0BC6D576 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:45 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='По материалам Д. Бека и К. Кована.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
