--- a/print5e28.html
+++ b/print5e28.html
@@ -2,7 +2,7 @@
 <title>Феномен "ментальной мастурбации"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F49ED by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:11 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Что Вам мешает уже сейчас жить той жизнью, которой Вы хотите?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
