Reencode index6 series to UTF-8

--- a/index61d9.html
+++ b/index61d9.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Как опираться на естественные вещи, чтобы использовать весь потенциал своих возможностей? Что мешает нам достигать большего? Этот ресурс состоит из двух частей:   Первая - это "Кнопка" своей глубинной мотивации. Там, где она есть (или ее можно найти) - бьет источник мощнейшей энергии. Зная его мы действительно можем легко и с удовольствием достичь тех целей, которые кажутся нам недоступными. И даже если мы совершенно не знаем как это сделать, с этой энергией мы легко найдем способ, время и силы узнать.  Вторая часть - это собственная "стратегия облома". Неосознаваемая (до этого) привычка вставлять себе палки в колеса. Достаточно осознать ее, чтобы просто перестать это делать, и не мешать самому себе достигать своих целей." />
         <meta name="keywords" content="мотивация, самомотивация, цель, постановка цели" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
