--- a/print65c7.html
+++ b/print65c7.html
@@ -1,10 +1,10 @@
 <html>
-<title>5 îøèáîê, "óáèâàþùèå" ïðîäàæè òðåíèíãîâ</title>
+<title>5 ошибок, "убивающие" продажи тренингов</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A2A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:27 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='5 îøèáîê ïðè ïðîäàæå òðåíèíãîâ, íå ïîçâîëÿþùèå âûéòè íà íîâûé óðîâåíü'>
+<meta name="description" content='5 ошибок при продаже тренингов, не позволяющие выйти на новый уровень'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,50 +14,50 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>5 îøèáîê, "óáèâàþùèå" ïðîäàæè òðåíèíãîâ</h1><a href=index65c7.html?id=F4A2A class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Ñóùåñòâóþò ïÿòü îñíîâíûõ îøèáîê, êîòîðûå &laquo;óáèâàþò&raquo; ïðîäàæè Âàøèõ òðåíèíãîâ. Â òî âðåìÿ êàê Âû ïðèëàãàåòå óñèëèÿ è òÿíåòåñü ââåðõ, ýòè êàìíè íå äàþò Âàì ïîäíÿòüñÿ âûøå. Èçáàâüòåñü îò ãðóçà è ïîëó÷èòå ëó÷øèé ðåçóëüòàò.</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>5 ошибок, "убивающие" продажи тренингов</h1><a href=index65c7.html?id=F4A2A class=slink>web-версия</a><p><span class='print'><p>
+	Существуют пять основных ошибок, которые &laquo;убивают&raquo; продажи Ваших тренингов. В то время как Вы прилагаете усилия и тянетесь вверх, эти камни не дают Вам подняться выше. Избавьтесь от груза и получите лучший результат.</p>
 <p>
 	&nbsp;</p>
 <p>
-	<span style="font-size: 16px;"><strong>Îòóñóòñòâèå ïðåäîïëàòû.</strong></span></p>
+	<span style="font-size: 16px;"><strong>Отусутствие предоплаты.</strong></span></p>
 <p>
-	Ïðè ïðåäîïëàòå êîíâåðñèÿ ñîñòàâëÿåò îò 70-75%. Íå íóæíî áðàòü 50- 40% ïðåäîïëàòû, âïîëíå äîñòàòî÷íî 10%. Åñëè Âàø òðåíèíã ñòîèò 10&nbsp;000, âîçüìèòå 1000 ðóáëåé. Íåáîëüøàÿ ïðåäîïëàòà áóäåò ñòèìóëîì ê äàëüíåéøèì äåéñòâèÿì.</p>
-<p>
-	&nbsp;</p>
-<p>
-	<span style="font-size: 16px;"><span style="font-weight: bold;">Î</span><strong>òñóòñòâèå ãàðàíòèé</strong>. </span></p>
-<p>
-	Î÷åíü ìíîãèå òðåíåðû íå õîòÿò äàâàòü ãàðàíòèè íà ñâîè òðåíèíãè, íå ñ÷èòàÿ èõ ïðîäóêòîì. Åñëè Âû äàåòå ãàðàíòèè, êîíâåðñèÿ îò ýòîãî ñòàíîâèòñÿ áîëüøå. Äàâàéòå ëþäÿì ãàðàíòèè, ýòî íå ïîäîðâåò Âàøè ïðîäàæè, à ëèøü èõ óñèëèò. ×åëîâåê ñïîêîåí, åñëè îí âèäèò ðåçóëüòàò, ëþäè ëîÿëüíû ê êà÷åñòâåííûì òðåíèíãàì.</p>
+	При предоплате конверсия составляет от 70-75%. Не нужно брать 50- 40% предоплаты, вполне достаточно 10%. Если Ваш тренинг стоит 10&nbsp;000, возьмите 1000 рублей. Небольшая предоплата будет стимулом к дальнейшим действиям.</p>
 <p>
 	&nbsp;</p>
 <p>
-	<span style="font-size: 16px;"><strong>Íåâåðíî âûáðàííàÿ íèøà</strong>. </span></p>
+	<span style="font-size: 16px;"><span style="font-weight: bold;">О</span><strong>тсутствие гарантий</strong>. </span></p>
 <p>
-	È äàæå ïðè íàëè÷èè êà÷åñòâåííîãî òðåíèíãà åãî íåïðàâèëüíîå îïèñàíèå íå ïîçâîëèò ëþäÿì, êîòîðûì îí íóæåí, íàéòè åãî. Ñ òðåíèíãàìè âàæåí ìàðêåòèíã. Âàì ïðèäåòñÿ ñèëüíåå êðóòèòü ïåäàëè äëÿ Âàøèõ ïðîäàæ. Íî åñëè Âû ïðàâèëüíî âûáðàëè íèøó &ndash; Âû ïîëó÷èòå ñåðüåçíûé ïèàð è àóäèòîðèþ íà ãîä âïåðåä. Íèøà&ndash; ýòî 50% óñïåõà.</p>
-<p>
-	&nbsp;</p>
-<p>
-	<span style="font-size: 16px;"><strong>Ðàññûëêà ïî áàçå àíîíñîâ ñâîèõ ìåðîïðèÿòèé</strong>.</span></p>
-<p>
-	Åå ñîâåðøàþò âñå, è îíà î÷åíü ñèëüíî &laquo;óáèâàåò&raquo; Âàøè ïðîäàæè (îñîáåííî ýòî äåëàþ òðåíèíãîâûå öåíòðû, ó êîòîðûõ åñòü êëèåíòñêàÿ áàçà). Ýòè àíîíñû ÷èòàåò î÷åíü ìàëî ëþäåé. Íóæíî îòïðàâëÿòü â âàøó áàçó ïîëåçíûé êîíòåíò. Êîíòåíò íóæíî ñëàòü êàê&nbsp; íåáîëüøèå ñòàòüè, çàìåòêè, áàéêè èëè èñòîðèè.</p>
+	Очень многие тренеры не хотят давать гарантии на свои тренинги, не считая их продуктом. Если Вы даете гарантии, конверсия от этого становится больше. Давайте людям гарантии, это не подорвет Ваши продажи, а лишь их усилит. Человек спокоен, если он видит результат, люди лояльны к качественным тренингам.</p>
 <p>
 	&nbsp;</p>
 <p>
-	<span style="font-size: 16px;"><strong><span style="font-weight: bold;">À</span>íîíñû òðåíèíãîâ&nbsp; âìåñòî ïðîäàæ. </strong></span></p>
+	<span style="font-size: 16px;"><strong>Неверно выбранная ниша</strong>. </span></p>
 <p>
-	Íóæíî âìåñòî àíîíñîâ äåëàòü ïðîäàæè, ÷òîá Âû ñðàçó çíàëè, ñêîëüêî ëþäåé áóäåò ó âàñ íà òðåíèíãå. Êîãäà Âàì íåîáõîäèìî ñîáèðàòü áàçó ïîä íîâûé òðåíèíã, ñîáèðàéòå åå ïîä íèøó ñâîåé ëèíåéêè òðåíèíãîâ.</p>
+	И даже при наличии качественного тренинга его неправильное описание не позволит людям, которым он нужен, найти его. С тренингами важен маркетинг. Вам придется сильнее крутить педали для Ваших продаж. Но если Вы правильно выбрали нишу &ndash; Вы получите серьезный пиар и аудиторию на год вперед. Ниша&ndash; это 50% успеха.</p>
 <p>
 	&nbsp;</p>
 <p>
-	Èñïîëüçóéòå óäà÷íûå ñòðàòåãèè, ìîäåëèðóéòå óñïåøíûõ ëþäåé, Âû óâåëè÷èòå ñâîþ ïðèáûëü è èçáàâèòåñü îò îñíîâíûõ îøèáîê.</p>
+	<span style="font-size: 16px;"><strong>Рассылка по базе анонсов своих мероприятий</strong>.</span></p>
 <p>
-	p.s. Îá ýòîì ïîäðîáíî ÿ ðàññêàçàë íà <a href="indexd330.html?id=F4A15">áåïëàòíîì âåáèíàðå ïî ïðîäàæå ÍËÏ-òðåíèíãîâ</a>.</p>
+	Ее совершают все, и она очень сильно &laquo;убивает&raquo; Ваши продажи (особенно это делаю тренинговые центры, у которых есть клиентская база). Эти анонсы читает очень мало людей. Нужно отправлять в вашу базу полезный контент. Контент нужно слать как&nbsp; небольшие статьи, заметки, байки или истории.</p>
+<p>
+	&nbsp;</p>
+<p>
+	<span style="font-size: 16px;"><strong><span style="font-weight: bold;">А</span>нонсы тренингов&nbsp; вместо продаж. </strong></span></p>
+<p>
+	Нужно вместо анонсов делать продажи, чтоб Вы сразу знали, сколько людей будет у вас на тренинге. Когда Вам необходимо собирать базу под новый тренинг, собирайте ее под нишу своей линейки тренингов.</p>
+<p>
+	&nbsp;</p>
+<p>
+	Используйте удачные стратегии, моделируйте успешных людей, Вы увеличите свою прибыль и избавитесь от основных ошибок.</p>
+<p>
+	p.s. Об этом подробно я рассказал на <a href="indexd330.html?id=F4A15">беплатном вебинаре по продаже НЛП-тренингов</a>.</p>
 <p align="right">
-	Åãîð Áóëûãèí,</p>
+	Егор Булыгин,</p>
 <p align="right">
-	êîó÷ ïî ïðîäàæàì òðåíèíãîâ</p>
+	коуч по продажам тренингов</p>
 <p>
-	Åñëè Âû ñ÷èòàåòå ýòîò ìàòåðàë ïîëåçíûì, ïîäåëèòåñü ñ äðóãèìè!</p>
+	Если Вы считаете этот матерал полезным, поделитесь с другими!</p>
 <p>
 	<a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -81,16 +81,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup5516.html?id=F4A2A&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5730.html?id=F4A2A&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5c78.html?id=F4A2A&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup0d32.html?id=F4A2A&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupc2f5.html?id=F4A2A&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5516.html?id=F4A2A&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5730.html?id=F4A2A&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5c78.html?id=F4A2A&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0d32.html?id=F4A2A&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupc2f5.html?id=F4A2A&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -113,12 +113,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Äëÿ ÍËÏåðîâ&quot;</p> <ul><li><a href='F4AF1.html' title=''>Ýòàïû ðàçâèòèÿ òðåíåðîâ</a></li><li><a href='F4AF4.html' title=''>Äëÿ ÷åãî íóæåí ìàðêåòèíã</a></li><li><a href='F4AF5.html' title='Â ýòîì âûïóñêå î òîì, êàê ïðàâèëüíî ñòðîèòü ñâîþ ìàðêåòèíãîâóþ ëèíåéêó è âçàèìîäåéñòâîâàòü ñ êëèåíòîì. '>Ìàðêåòèíãîâàÿ ëèíåéêà è ìåòîäèêà ñòóïåíåê</a></li><li><a href='F4A18.html' title='×òî íóæíî ñäåëàòü íà÷èíàþùåìó òðåíåðó, ÷òîáû ñîçäàòü âîñòðåáîâàííûé òðåíèíã.'>Äâà ïðàâèëà ëó÷øåãî òðåíèíãà</a></li><li><a href='F4AF3.html' title='×òî òàêîå "Ìàðêåòèíãîâûé êâàäðàíò"? Êàê è êîãäà èñïîëüçîâàòü ïðèåì "Èñòîðèè" èëè "Êà÷åëè"? Îá ýòîì â îäíîì èç êóñî÷êîâ "Òðåíèíãà íà ìèëëèîí".'>Ìàðêåòèíãîâûé êâàäðàíò</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Для НЛПеров&quot;</p> <ul><li><a href='F4AF1.html' title=''>Этапы развития тренеров</a></li><li><a href='F4AF4.html' title=''>Для чего нужен маркетинг</a></li><li><a href='F4AF5.html' title='В этом выпуске о том, как правильно строить свою маркетинговую линейку и взаимодействовать с клиентом. '>Маркетинговая линейка и методика ступенек</a></li><li><a href='F4A18.html' title='Что нужно сделать начинающему тренеру, чтобы создать востребованный тренинг.'>Два правила лучшего тренинга</a></li><li><a href='F4AF3.html' title='Что такое "Маркетинговый квадрант"? Как и когда использовать прием "Истории" или "Качели"? Об этом в одном из кусочков "Тренинга на миллион".'>Маркетинговый квадрант</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4A2A" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -141,13 +141,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </p>
-</span><p><a href=index65c7.html?id=F4A2A class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index65c7.html?id=F4A2A class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -208,7 +208,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -230,7 +230,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
