--- a/print6ff3.html
+++ b/print6ff3.html
@@ -1,10 +1,10 @@
 <html>
-<title>Òâîð÷åñòâî</title>
+<title>Творчество</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=A0E5F947-F4655-5A54C351 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:06:24 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Òåõíèêè ñîçäàíèÿ òâîð÷åñêèõ ïðîöåññîâ.'>
+<meta name="description" content='Техники создания творческих процессов.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Òâîð÷åñòâî</h1><a href=index6ff3.html?id=A0E5F947-F4655-5A54C351 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='CABE4B60-F4298-EC607BAC.html'>Ñòðàòåãèÿ ýôôåêòèâíîãî íàïèñàíèÿ ñòàòåé</a></h2>Êàê ïèñàòü ñòàòüè ëåãêî, áûñòðî è èíòåðåñíî.</li><li><h2><a href='F478D.html'>Ñåìü ïðèåìîâ êðåàòèâíîñòè ïðè ðàáîòå ñ òåêñòîì</a></h2>Åñëè Âàì ñëó÷àåòñÿ ðàáîòàòü ñ òåêñòîì, ýòè ïðèåìû ïîìîãóò Âàì ñîçäàâàòü òåêñòû ëåã÷å è äåëàòü èõ áîëåå èíòåðåñíûìè, óâëåêàòåëüíûìè è ïîëåçíûìè.</li><li><h2><a href='F4843.html'>Êàê ðàñêðóòèòüñÿ ñ ïîìîùüþ Subscribe.ru?</a></h2>Ñòðàòåãèÿ áûñòðîãî è ãàðàíòèðîâàííîãî ïîëó÷åíèÿ áîëüøîãî êîëè÷åñòâà ÷èòàòåëåé. Ëè÷íûé îïûò.</li><li><h2><a href='F4844.html'>Æèâûå ñòàòüè è ìåðòâûå</a></h2>Êðàñèâî ñëîæåííûå ñëîâà - ëèøü ðàêîâèíà, à ÷òî ÿâëÿåòñÿ æåì÷óæèíîé ñòàòüè?</li><li><h2><a href='F4847.html'>×òî äåëàåò ñòàòüþ óâëåêàòåëüíîé?</a></h2>Òðè îñíîâíûõ ôîêóñà âíèìàíèÿ, êîòîðûå ïîìîãóò Âàì ñäåëàòü ñâîè ñòàòüè ïî-íàñòîÿùåìó óâëåêàòåëüíûìè.</li><li><h2><a href='F4849.html'>Âåñü ìèð íà êîí÷èêàõ òâîèõ ïàëüöåâ</a></h2>Êòî òàêîé ïèñàòåëü? È â ÷åì åãî "ìàãèÿ"?</li></ul></p>
-</span><p><a href=index6ff3.html?id=A0E5F947-F4655-5A54C351 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Творчество</h1><a href=index6ff3.html?id=A0E5F947-F4655-5A54C351 class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='CABE4B60-F4298-EC607BAC.html'>Стратегия эффективного написания статей</a></h2>Как писать статьи легко, быстро и интересно.</li><li><h2><a href='F478D.html'>Семь приемов креативности при работе с текстом</a></h2>Если Вам случается работать с текстом, эти приемы помогут Вам создавать тексты легче и делать их более интересными, увлекательными и полезными.</li><li><h2><a href='F4843.html'>Как раскрутиться с помощью Subscribe.ru?</a></h2>Стратегия быстрого и гарантированного получения большого количества читателей. Личный опыт.</li><li><h2><a href='F4844.html'>Живые статьи и мертвые</a></h2>Красиво сложенные слова - лишь раковина, а что является жемчужиной статьи?</li><li><h2><a href='F4847.html'>Что делает статью увлекательной?</a></h2>Три основных фокуса внимания, которые помогут Вам сделать свои статьи по-настоящему увлекательными.</li><li><h2><a href='F4849.html'>Весь мир на кончиках твоих пальцев</a></h2>Кто такой писатель? И в чем его "магия"?</li></ul></p>
+</span><p><a href=index6ff3.html?id=A0E5F947-F4655-5A54C351 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
