--- a/index649f.html
+++ b/index649f.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="…èëè êàê íà÷àòü ïðåâðàùàòü ñîáñòâåííóþ ðåâíîñòü â âåðíîñòü ïàðòíåðà." />
         <meta name="keywords" content="ëþáîâü, ðåâíîñòü, îòíîøåíèÿ, ëþáèìûé" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
