--- a/print604d.html
+++ b/print604d.html
@@ -2,7 +2,7 @@
 <title>Эмоции = результат - ожидание</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=A97DD150-F469F-D8389042 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:05 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='эмоции, ожидание'>
 <meta name="description" content='Управление ожиданиями.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
