--- a/print6056.html
+++ b/print6056.html
@@ -1,8 +1,8 @@
 <html>
-<title>Ìàðøðóò. ×àñòü âòîðàÿ. ÑóïåðÑèëà ðîäîì èç äåòñòâà, èëè ïî÷åìó äåòñêèå ñêàçêè íèêîãäà íå âûéäóò èç ìîäû</title>
+<title>Маршрут. Часть вторая. СуперСила родом из детства, или почему детские сказки никогда не выйдут из моды</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C21 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:07:32 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
@@ -14,29 +14,29 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ìàðøðóò. ×àñòü âòîðàÿ. ÑóïåðÑèëà ðîäîì èç äåòñòâà, èëè ïî÷åìó äåòñêèå ñêàçêè íèêîãäà íå âûéäóò èç ìîäû</h1><a href=index6056.html?id=F4C21 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Маршрут. Часть вторая. СуперСила родом из детства, или почему детские сказки никогда не выйдут из моды</h1><a href=index6056.html?id=F4C21 class=slink>web-версия</a><p><span class='print'><p>
 	&nbsp;</p>
 <p align="JUSTIFY">
-	Çàãëÿíåì â äåòñêóþ. Íå êîìíàòó &ndash; áèáëèîòåêó. Âîçüìåì ñ ïîëêè òâîþ ëþáèìóþ êíèæêó. Èëè íåñêîëüêî. Êàêèå ýòî êíèæêè?</p>
+	Заглянем в детскую. Не комнату &ndash; библиотеку. Возьмем с полки твою любимую книжку. Или несколько. Какие это книжки?</p>
 <p align="JUSTIFY">
-	×èòàÿ èõ, ìû ïåðåíîñèìñÿ â âîëøåáíûé ìèð, ãäå òû ñòàíîâèøüñÿ îäíèì èç ãåðîåâ, ó êàæäîãî èç êîòîðûõ åñòü óäèâèòåëüíûå ñïîñîáíîñòè (ïîíèìàòü ÿçûê æèâîòíûõ, çíàòü îòâåòû íà âñå âîïðîñû, ïîñòðîèòü Ëåòó÷èé Êîðàáëü, âûõîäèòü ñóõèì èç âîäû, óáåãàòü îò áàáóøêè, äåäóøêè, çàéöà, âîëêà è ìåäâåäÿ). Â ýòîì ìèðå âñå ñòðîèòñÿ ïî ñâîèì çàêîíàì (÷òîáû äîéòè äî Èçóìðóäíîãî Ãîðîäà, íàäî èäòè ïî Äîðîãå èç Æåëòîãî êèðïè÷à) è îáÿçàòåëüíî âñå âñåãäà çàêàí÷èâàåòñÿ õîðîøî.</p>
+	Читая их, мы переносимся в волшебный мир, где ты становишься одним из героев, у каждого из которых есть удивительные способности (понимать язык животных, знать ответы на все вопросы, построить Летучий Корабль, выходить сухим из воды, убегать от бабушки, дедушки, зайца, волка и медведя). В этом мире все строится по своим законам (чтобы дойти до Изумрудного Города, надо идти по Дороге из Желтого кирпича) и обязательно все всегда заканчивается хорошо.</p>
 <p align="JUSTIFY">
-	Ìû âçðîñëååì, à æåëàíèå &laquo;÷òîáû âñå áûëî õîðîøî&raquo;, îñòàåòñÿ. È ìû íà÷èíàåì ïîâòîðÿòü âî âçðîñëîé æèçíè òî, ÷òî äåëàëè íàøè ëþáèìûå ãåðîè, ïîòîìó ÷òî ó íèõ òàì êàê ðàç âñå ïîëó÷àëîñü. Íåäàâíî ÿ ðàçãîâàðèâàëà ñî ñâîåé ïîäðóãîé &ndash; îðãàíèçàòîðîì òðåíèíãîâ. Îíà ðàññêàçàëà ìíå, ÷òî â äåòñòâå áîëüøå âñåãî ëþáèëà ñêàçêó &laquo;Äþéìîâî÷êà&raquo;, îñîáåííî ìîìåíò, êîãäà Äþéìîâî÷êà óïëûâàåò îò æàá èç áîëîòà íà áîëüøîì ëèñòå êóâøèíêè. ß ñïðîñèëà ó íåå, êàêàÿ ãëàâíàÿ ñïîñîáíîñòü, ïî åå ìíåíèþ, ïîìîãëà Äþéìîâî÷êå ñäåëàòü ýòî? Îíà îòâåòèëà: &laquo;Ñïîñîáíîñòü áûòü ñâîáîäíîé è íè îò êîãî íå çàâèñåòü&raquo;. ß óëûáíóëàñü è íàïîìíèëà åé, êàê îíà ñîâñåì íåäàâíî óâîëèëàñü ñ ðàáîòû, êîòîðàÿ åé ñîâñåì íå íðàâèëàñü, îòïðàâèëàñü áóêâàëüíî â íèêóäà, îòêðûëà ñîáñòâåííûé òðåíèíãîâûé öåíòð, â êîòîðîì ñàìà ñåáå õîçÿéêà. Âîò òåáå è óïëûëà ñâîáîäíàÿ Äþéìîâî÷êà èç áîëîòà. :)</p>
+	Мы взрослеем, а желание &laquo;чтобы все было хорошо&raquo;, остается. И мы начинаем повторять во взрослой жизни то, что делали наши любимые герои, потому что у них там как раз все получалось. Недавно я разговаривала со своей подругой &ndash; организатором тренингов. Она рассказала мне, что в детстве больше всего любила сказку &laquo;Дюймовочка&raquo;, особенно момент, когда Дюймовочка уплывает от жаб из болота на большом листе кувшинки. Я спросила у нее, какая главная способность, по ее мнению, помогла Дюймовочке сделать это? Она ответила: &laquo;Способность быть свободной и ни от кого не зависеть&raquo;. Я улыбнулась и напомнила ей, как она совсем недавно уволилась с работы, которая ей совсем не нравилась, отправилась буквально в никуда, открыла собственный тренинговый центр, в котором сама себе хозяйка. Вот тебе и уплыла свободная Дюймовочка из болота. :)</p>
 <p align="JUSTIFY">
-	Êàêèå ñêàçêè òû ñ óäîâîëüñòâèåì ïåðå÷èòûâàåøü è ñåé÷àñ? Êàêèå äåòñêèå ôèëüìû ñìîòðèøü íåñêîëüêî ðàç?</p>
+	Какие сказки ты с удовольствием перечитываешь и сейчас? Какие детские фильмы смотришь несколько раз?</p>
 <p align="JUSTIFY">
-	Êàêîé ñêàçî÷íûé ãåðîé òâîåãî äåòñòâà &ndash; ñàìûé ëþáèìûé?</p>
+	Какой сказочный герой твоего детства &ndash; самый любимый?</p>
 <p align="JUSTIFY">
-	Êàêàÿ îñîáåííîñòü òâîåãî ëþáèìîãî ãåðîÿ (ãåðîåâ) òåáå íðàâèòñÿ, âîñõèùàåò, èëè òåáå õîòåëîñü áû òàêóþ æå áîëüøå âñåãî?</p>
+	Какая особенность твоего любимого героя (героев) тебе нравится, восхищает, или тебе хотелось бы такую же больше всего?</p>
 <p align="JUSTIFY">
-	È ñàìîå ãëàâíîå &ndash; êàê ýòî ðåàëèçóåòñÿ ñåé÷àñ â òâîåé æèçíè? È ê ÷åìó ïðèâåäåò òåáÿ?;)</p>
+	И самое главное &ndash; как это реализуется сейчас в твоей жизни? И к чему приведет тебя?;)</p>
 <p align="JUSTIFY">
-	Áóäó æäàòü òâîèõ îòêðûòèé&nbsp;<span style="font-size: 14px; ">â êîììåíòàðèÿõ.</span></p>
+	Буду ждать твоих открытий&nbsp;<span style="font-size: 14px; ">в комментариях.</span></p>
 <p class="p1" style="text-indent: 0px; text-align: right; ">
-	<em style="font-size: 14px; ">Åëåíà Ïèìåíîâà<br />
-	Èþëü 2012 ã.</em></p>
+	<em style="font-size: 14px; ">Елена Пименова<br />
+	Июль 2012 г.</em></p>
 <p class="p1" style="text-indent: 0px; text-align: center; ">
-	<a href="tss.html" style="font-size: 14px; background-color: rgb(255, 255, 255); ">Âåá-êóðñ &quot;ÑóïåðÑèëà ïîä êëþ÷&quot;</a></p>
+	<a href="tss.html" style="font-size: 14px; background-color: rgb(255, 255, 255); ">Веб-курс &quot;СуперСила под ключ&quot;</a></p>
 <p class="p1" style="text-indent: 0px; text-align: center; ">
 	&nbsp;</p>
 <p class="p1" style="text-indent: 0px; ">
@@ -62,16 +62,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupfe77.html?id=F4C21&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup4784.html?id=F4C21&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup1eb3.html?id=F4C21&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupe66a.html?id=F4C21&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup4af4.html?id=F4C21&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupfe77.html?id=F4C21&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4784.html?id=F4C21&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup1eb3.html?id=F4C21&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupe66a.html?id=F4C21&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4af4.html?id=F4C21&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -112,26 +112,26 @@ function voted(){
 		}(document, 'script', 'facebook-jssdk'));</script>
 
 
-	<h3>Êîììåíòàðèè Facebook</h3>
+	<h3>Комментарии Facebook</h3>
 <div id="fb-root">
 	 </div>
 <div class="fb-comments" data-href="http://nlping.ru/F4C21" data-num-posts="100" data-width="600">
 	 </div>
 
-	<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+	<h3>Комментарии Вконтакте</h3>
 <br/>
 <div id="vk_comments">
 	 </div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false}, "F4C21");
 </script></p>
-</span><p><a href=index6056.html?id=F4C21 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index6056.html?id=F4C21 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -192,7 +192,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -214,7 +214,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
