--- a/print641d.html
+++ b/print641d.html
@@ -2,7 +2,7 @@
 <title>Сказка про креативного НЛПера</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4856 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:39 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Сказка для взрослых. По просьбе Альки, которая верит в волшебство, в сказку приглашен Фиолетовый Страус.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
