--- a/print649f.html
+++ b/print649f.html
@@ -2,7 +2,7 @@
 <title>10 правил созидательной ревности</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F47DE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:16 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='любовь, ревность, отношения, любимый'>
 <meta name="description" content='…или как начать превращать собственную ревность в верность партнера.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
