--- a/print68c6.html
+++ b/print68c6.html
@@ -1,10 +1,10 @@
 <html>
-<title>Èíòåãðàëüíàÿ ïñèõîëîãèÿ</title>
+<title>Интегральная психология</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=98F84D94-F45E7-FB454F52 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:02:50 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='èíòåãðàëüíàÿ, ïñèõîëîãèÿ'>
-<meta name="description" content='Ñòàòüè, êîíñïåêòû è äðóãèå ìàòåðèàëû ïî èíòåãðàëüíîé ïñèõîëîãèè.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='интегральная, психология'>
+<meta name="description" content='Статьи, конспекты и другие материалы по интегральной психологии.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Èíòåãðàëüíàÿ ïñèõîëîãèÿ</h1><a href=index68c6.html?id=98F84D94-F45E7-FB454F52 class=slink>web-âåðñèÿ</a><p><span class='print'><ul><li><h2><a href='24705216-F4608-D3BB02AA.html'>Òèïû áåññîçíàòåëüíîãî</a></h2>Êîíñïåêò ãëàâû èç êíèãè Êåíà Óèëáåðà "Ïðîåêò Àòìàí" íàèáîëåå åìêî îïèñûâàþùèé ñîâðåìåííîå ïðåäñòàâëåíèå íàóêè î áåññîçíàòåëüíîì ÷åëîâåêà.</li><li><h2><a href='78BBC7B9-F4645-87216A28.html'>AQAL - èíòåãðàëüíàÿ êàðòà Êåíà Óèëáåðà</a></h2>Ââåäåíèå â èíòåãðàëüíóþ òåîðèþ è ïðàêòèêó</li><li><h2><a href='CF095354-F46AE-A21BB56D.html'>Ñåðäöå ìèðà</a></h2>...Ìû æèâåì â ýòîì ìèðå, ÷òîáû ýòîìó íàó÷èòüñÿ - äîâåðÿòü ìóäðîñòè âñåëåííîé. Íàçûâàéòå åå êîñìè÷åñêèì ðàçóìîì, Áîãîì, äàî, íèðâàíîé, ìîêøåé - â îñíîâå âñåõ ðåëèãèé ëåæèò îäíî è òî æå.</li><li><h2><a href='F4737.html'>Ìåõàíèçì êàðìû - êàê ýòî ðàáîòàåò?</a></h2>Êàê ðàáîòàåò êàðìè÷åñêèé ìåõàíèçì íà óðîâíå ïñèõîëîãèè. Çà÷åì îí íàì íóæåí è êàê ìîæíî òðàíñôîðìèðîâàòü ñâîþ êàðìó?</li><li><h2><a href='F4740.html'>Èíòóèöèÿ è ëîãèêà êàê ëåáåäü, ðàê è ùóêà</a></h2>Âñå, êòî ïðîáóåò îñîçíàííî èñïîëüçîâàòü èíòóèöèþ ðàíî èëè ïîçäíî ïðîõîäÿò ÷åðåç îäíó îáùóþ äèëåììó: êîãî ñëóøàòü, êîãäà îòâåòû ðàçíûå - èíòóèöèþ èëè ëîãèêó?</li><li><h2><a href='F47E3.html'>Çðèòåëüíàÿ ëîãèêà è èíòóèöèÿ ...èëè ïî÷åìó ìû âñ¸ åùå íå ÿñíîâèäÿùèå?</a></h2>Êàê óñòðîåí ýòîò ìåõàíèçì (ïðîãíîçèðîâàíèÿ áóäóùåãî) ñ íàó÷íîé ïîçèöèè. ...À âåðíåå, íå ñòîëüêî êàê îí óñòðîåí, ñêîëüêî êàê åãî ðàçâèòü è êàêèå ïðåïÿòñòâèÿ íóæíî ïðåîäîëåòü.</li></ul></span><p><a href=index68c6.html?id=98F84D94-F45E7-FB454F52 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Интегральная психология</h1><a href=index68c6.html?id=98F84D94-F45E7-FB454F52 class=slink>web-версия</a><p><span class='print'><ul><li><h2><a href='24705216-F4608-D3BB02AA.html'>Типы бессознательного</a></h2>Конспект главы из книги Кена Уилбера "Проект Атман" наиболее емко описывающий современное представление науки о бессознательном человека.</li><li><h2><a href='78BBC7B9-F4645-87216A28.html'>AQAL - интегральная карта Кена Уилбера</a></h2>Введение в интегральную теорию и практику</li><li><h2><a href='CF095354-F46AE-A21BB56D.html'>Сердце мира</a></h2>...Мы живем в этом мире, чтобы этому научиться - доверять мудрости вселенной. Называйте ее космическим разумом, Богом, дао, нирваной, мокшей - в основе всех религий лежит одно и то же.</li><li><h2><a href='F4737.html'>Механизм кармы - как это работает?</a></h2>Как работает кармический механизм на уровне психологии. Зачем он нам нужен и как можно трансформировать свою карму?</li><li><h2><a href='F4740.html'>Интуиция и логика как лебедь, рак и щука</a></h2>Все, кто пробует осознанно использовать интуицию рано или поздно проходят через одну общую дилемму: кого слушать, когда ответы разные - интуицию или логику?</li><li><h2><a href='F47E3.html'>Зрительная логика и интуиция ...или почему мы всё еще не ясновидящие?</a></h2>Как устроен этот механизм (прогнозирования будущего) с научной позиции. ...А вернее, не столько как он устроен, сколько как его развить и какие препятствия нужно преодолеть.</li></ul></span><p><a href=index68c6.html?id=98F84D94-F45E7-FB454F52 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -81,7 +81,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -103,7 +103,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
