--- a/print68e1.html
+++ b/print68e1.html
@@ -2,7 +2,7 @@
 <title>Òåïåðü âñÿ æèçíü â íîâîì áëîãå</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4E16 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:22:55 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='óâåðåííîñòü â ñåáå'>
 <meta name="description" content='Òåïåðü âñå íîâûå ìàòåðèàëû ïîÿâëÿþòñÿ â áëîãå Åãîðà Áóëûãèíà: http://egorbulygin.ru'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
