--- a/print6982.html
+++ b/print6982.html
@@ -2,7 +2,7 @@
 <title>Профиль развития человека</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C43A225D-F45E8-45E47EF3 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:44 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Модель, позволяющая многомерно описать развитие человека.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
