--- a/print6b71.html
+++ b/print6b71.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ñóòü ñïèðàëüíîé äèíàìèêè çà 3 ìèíóòû</title>
+<title>Суть спиральной динамики за 3 минуты</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C87 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:43 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Íà êàêîì óðîâíå íàõîäèòñÿ Âàøå ëèäåðñòâî? Êàê îïðåäåëèòü, êàê ìûñëèò ÷åëîâåê, êàêîâû åãî ãëóáèííûå ìîòèâû è êàê îí ïîñòóïèò â òîì èëè èíîì ñëó÷àå?'>
+<meta name="description" content='На каком уровне находится Ваше лидерство? Как определить, как мыслит человек, каковы его глубинные мотивы и как он поступит в том или ином случае?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñóòü ñïèðàëüíîé äèíàìèêè çà 3 ìèíóòû</h1><a href=index6b71.html?id=F4C87 class=slink>web-âåðñèÿ</a><p><span class='print'><p style="text-align: center;"></p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Суть спиральной динамики за 3 минуты</h1><a href=index6b71.html?id=F4C87 class=slink>web-версия</a><p><span class='print'><p style="text-align: center;"></p>
 
 <p style="text-align: center;"><iframe allowfullscreen="" frameborder="0" height="315" src="http://www.youtube.com/embed/j_5w-15CRww?rel=0" width="560"></iframe></p>
 
 <p></p>
 
 <ul>
-	<li><a href="spiralnaya_dinamika_vvedenie.html">Áåñïëàòíûé âèäåî-òðåíèíã ïî Ñïèðàëüíîé äèíàìèêå</a></li>
-	<li><a href="7ll-2.html">Ïîäðîáíåå î òðåíèíãå "7 óðîâíåé ëèäåðñòâà 2.0"</a></li>
+	<li><a href="spiralnaya_dinamika_vvedenie.html">Бесплатный видео-тренинг по Спиральной динамике</a></li>
+	<li><a href="7ll-2.html">Подробнее о тренинге "7 уровней лидерства 2.0"</a></li>
 </ul>
 
 <p><a name='vote'></a><script type='text/javascript'>
@@ -47,16 +47,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup2113.html?id=F4C87&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup99dc.html?id=F4C87&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup6269.html?id=F4C87&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2e5d.html?id=F4C87&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupf148.html?id=F4C87&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2113.html?id=F4C87&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup99dc.html?id=F4C87&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup6269.html?id=F4C87&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2e5d.html?id=F4C87&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupf148.html?id=F4C87&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -105,22 +105,22 @@ var idcomments_post_url = 'F4C87.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4C87" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script></p>
-</span><p><a href=index6b71.html?id=F4C87 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index6b71.html?id=F4C87 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -181,7 +181,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -203,7 +203,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
