--- a/print6b8f.html
+++ b/print6b8f.html
@@ -2,7 +2,7 @@
 <title>Мысли-вирусы</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=2C48C76E-F42BE-1E214CA1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:41 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Что такое мысли-вирусы и как их можно обезвредить.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
