--- a/print6ee4.html
+++ b/print6ee4.html
@@ -1,10 +1,10 @@
 <html>
-<title>Êàê îíè çàðàáîòàëè â Ñàìàðå 135.000ð. çà 1,5 ÷àñà.</title>
+<title>Как они заработали в Самаре 135.000р. за 1,5 часа.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A99 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:29 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='15-òè ìèíóòíûé êîó÷èíã ïî òåëåôîíó ïðèíåñ êëèåíòó 135.000 ðóáëåé çà 1,5 ÷àñà. Ó íåãî âîîáùå íå áûëî íè÷åãî - íè ñàéòà, íè êëèåíòñêîé áàçû, íè ñîáñòâåííîãî òðåíèíãà...'>
+<meta name="description" content='15-ти минутный коучинг по телефону принес клиенту 135.000 рублей за 1,5 часа. У него вообще не было ничего - ни сайта, ни клиентской базы, ни собственного тренинга...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,39 +14,39 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Êàê îíè çàðàáîòàëè â Ñàìàðå 135.000ð. çà 1,5 ÷àñà.</h1><a href=index6ee4.html?id=F4A99 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Ïðåäñòàâëÿåòå, â÷åðà ìíå ïîçâîíèë îäèí ìîé êëèåíò èç êîó÷èíãà è ðàññêàçàë, êàê îíè ìåíÿ ïåðåïëþíóëè! Äåëî áûëî òàê:<br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Как они заработали в Самаре 135.000р. за 1,5 часа.</h1><a href=index6ee4.html?id=F4A99 class=slink>web-версия</a><p><span class='print'><p>
+	Представляете, вчера мне позвонил один мой клиент из коучинга и рассказал, как они меня переплюнули! Дело было так:<br />
 	<br />
-	Ìåñÿöà ïîëòîðà íàçàä çâîíèò ìíå Àíòîí (êëèåíò) è ãîâîðèò:<br />
+	Месяца полтора назад звонит мне Антон (клиент) и говорит:<br />
 	<br />
-	- Âûðó÷àé, ìíå íóæíî ñðî÷íî ñ òîáîé ïîãîâîðèòü! Ó ìåíÿ çàâòðà ñòàðòóåò âåáèíàð, è ÿ ïîíÿòèÿ íå èìåþ êàê ïåðåâåñòè ýòèõ ëþäåé íà ñëåäóþùèé êóðñ. Â îáùåì, ìíå ñðî÷íî íóæíà òâîÿ ìåòîäèêà ïðîäàæè íà òðåíèíãå.<br />
+	- Выручай, мне нужно срочно с тобой поговорить! У меня завтра стартует вебинар, и я понятия не имею как перевести этих людей на следующий курс. В общем, мне срочно нужна твоя методика продажи на тренинге.<br />
 	<br />
-	À ó ìåíÿ òîãäà êàê ðàç áûëà ïîëíàÿ çàïàðà, è ÿ ïîíèìàþ, ÷òî ìàêñèìóì ÷òî ñìîãó íàéòè - ýòî 15 ìèíóò, ïîêà áóäó åõàòü íà äåëîâóþ âñòðå÷ó...<br />
+	А у меня тогда как раз была полная запара, и я понимаю, что максимум что смогу найти - это 15 минут, пока буду ехать на деловую встречу...<br />
 	<br />
-	È âîò ÿ ëå÷ó ïîë Ëåíèíñêîìó ïðîñïåêòó íà âñòðå÷ó ñ êëþ÷åâûì ïàðòíåðîì, è ìû ñîçâàíèâàåìñÿ ñ Àíòîíîì. ß î÷åíü áåãëî, òåçèñàìè äàþ åìó ñóòü ìåòîäèêè è ôîêóñèðóþ åãî âíèìàíèå íà êëþ÷åâûõ òî÷êàõ. À ïðî ñåáÿ äóìàþ, ÷òî äàé Áîã ïåðåäàë åìó äåñÿòóþ ÷àñòü âñåé ñèñòåìû. Îí âñå çàïèñûâàåò, ãîâîðèò ñïàñèáî è âåøàåò òðóáêó.<br />
+	И вот я лечу пол Ленинскому проспекту на встречу с ключевым партнером, и мы созваниваемся с Антоном. Я очень бегло, тезисами даю ему суть методики и фокусирую его внимание на ключевых точках. А про себя думаю, что дай Бог передал ему десятую часть всей системы. Он все записывает, говорит спасибо и вешает трубку.<br />
 	<br />
-	È âîò â÷åðà (ñïóñòÿ 1,5 ìåñÿöà) ìû ñ íèì ñîçâàíèåìñÿ, è îí ðàññêàçûâàåò ÷òî ïðîèçîøëî çà ýòî âðåìÿ.<br />
+	И вот вчера (спустя 1,5 месяца) мы с ним созваниемся, и он рассказывает что произошло за это время.<br />
 	<br />
-	×òî òàì áûëî ñ âåáèíàðîì ÿ òàê è íå ïîíÿë... Íî ñàìîå èíòåðåñíîå áûëî ïîòîì.<br />
+	Что там было с вебинаром я так и не понял... Но самое интересное было потом.<br />
 	<br />
-	Ñ ìîèõ ñëîâ îí îáó÷èë ýòîé ìåòîäèêå ñâîåãî òðåíåðà. (Ïðè÷åì, ñíà÷àëà îí ïðèìåíèë ýòó æå ìåòîäèêó ÷òîáû âîîáùå åå åìó ïðîäàòü - íó, òî åñòü, óãîâîðèòü åãî îòîðâàòü ïîïó îò ïðèâû÷íîãî ñòóëà è ïîïðîáîâàòü ÷òî-òî íîâîå ;)). À êîãäà òîò âäîõíîâèëñÿ, íà÷àëàñü âåñåëóõà!<br />
+	С моих слов он обучил этой методике своего тренера. (Причем, сначала он применил эту же методику чтобы вообще ее ему продать - ну, то есть, уговорить его оторвать попу от привычного стула и попробовать что-то новое ;)). А когда тот вдохновился, началась веселуха!<br />
 	<br />
-	Ó íèõ íå áûëî íè÷åãî - íè áàçû, íè ñàéòà, è âîîáùå âñå ýòî ïðîèñõîäèëî â Ñàìàðå (ãäå ëþäè çàðàáàòûâàþò ñèëüíî ìåíüøå, ÷åì â Ìîñêâå, è 15.000ð çà òðåíèíã òàì - ýòî äîðîãî). Íå ñèëüíî çàìîðà÷èâàÿñü îíè íàõîäÿò òðåíèíãîâûé öåíòð, êîòîðûé çà ïàðòíåðñêèé ïðîöåíò ñ ïðîäàæ ñîáèðàåò èì 20 ÷åëîâåê íà âå÷åðíèé ìàñòåð-êëàññ.<br />
+	У них не было ничего - ни базы, ни сайта, и вообще все это происходило в Самаре (где люди зарабатывают сильно меньше, чем в Москве, и 15.000р за тренинг там - это дорого). Не сильно заморачиваясь они находят тренинговый центр, который за партнерский процент с продаж собирает им 20 человек на вечерний мастер-класс.<br />
 	<br />
-	Òðåíåð äåëàåò âñå êàê åìó ñêàçàë Àíòîí, â òî÷íîñòè ñ òåì, êàê ñêàçàë åìó ÿ. È çà ïîëòîðà ÷àñà îíè ïðîäàþò ñâîèõ òðåíèíèíãîâ íà 135.000 ðóáëåé! Íåïëîõî äëÿ Ñàìàðû? Ïðè÷åì, ÷òî ñàìîå óäèâèòåëüíîå - ñ 45% êîíâåðñèåé!<br />
+	Тренер делает все как ему сказал Антон, в точности с тем, как сказал ему я. И за полтора часа они продают своих тренинингов на 135.000 рублей! Неплохо для Самары? Причем, что самое удивительное - с 45% конверсией!<br />
 	<br />
-	Ïîñëå ýòîãî Àíòîí ïåðåñêàçàë ýòó ìåòîäèêó åùå îäíîìó ñâîåìó äðóãó, êîòîðûé âîîáùå íå òðåíåð è íèêîãäà íå âûñòóïàë ïåðåä àóäèòîðèåé. È òîò ðåøèâ ïðîâåðèòü &laquo;ñðàáîòàåò ëè?&raquo; ïðîâåë 3-õ ÷àñîâîé ìàñòåð-êëàññ, è çàðàáîòàë 1000$. Ñ ïåðâîé ïîïûòêè.<br />
+	После этого Антон пересказал эту методику еще одному своему другу, который вообще не тренер и никогда не выступал перед аудиторией. И тот решив проверить &laquo;сработает ли?&raquo; провел 3-х часовой мастер-класс, и заработал 1000$. С первой попытки.<br />
 	<br />
-	&nbsp;Âèäåî-ðàññêàç Àíòîíà îá ýòîì ñëó÷àå.</p>
+	&nbsp;Видео-рассказ Антона об этом случае.</p>
 <p style="text-align: center;">
 	<iframe allowfullscreen="" frameborder="0" height="360" src="http://www.youtube.com/embed/sr4AFJZMNzg?rel=0" width="480"></iframe></p>
 <p>
 	&nbsp;</p>
 <p>
-	<strong>P.S.</strong> Íà <a href="indexc224.html?id=million_training">Òðåíèíãå íà ìèëëèîí</a> ÿ äàì Âàì âñþ ìåòîäèêó öåëèêîì. À êàæäûé ó÷àñòíèê òðåíèíãà ïîëó÷èò â ïîäàðîê 45-ìèíóòíóþ êîó÷-ñåññèþ ñî ìíîé, â õîäå êîòîðîé ÿ äàì Âàì âñþ êëþ÷åâóþ èíôîðìàöèþ ïî Âàøåìó çàïðîñó. È íàïîìèíàþ, äî êîíöà ñàìîãî ëó÷øåãî ïðåäëîæåíèÿ íà ýòîò òðåíèíã îñòàëîñü 34 ÷àñà.<br />
+	<strong>P.S.</strong> На <a href="indexc224.html?id=million_training">Тренинге на миллион</a> я дам Вам всю методику целиком. А каждый участник тренинга получит в подарок 45-минутную коуч-сессию со мной, в ходе которой я дам Вам всю ключевую информацию по Вашему запросу. И напоминаю, до конца самого лучшего предложения на этот тренинг осталось 34 часа.<br />
 	&nbsp;</p>
 <p style="text-align: right;">
-	<em>Ñ óâàæåíèåì, Åãîð Áóëûãèí</em></p>
+	<em>С уважением, Егор Булыгин</em></p>
 <p>
 	<strong><a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -70,16 +70,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup60c6.html?id=F4A99&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupaa6e.html?id=F4A99&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup3f65.html?id=F4A99&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup490d.html?id=F4A99&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2154.html?id=F4A99&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup60c6.html?id=F4A99&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupaa6e.html?id=F4A99&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3f65.html?id=F4A99&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup490d.html?id=F4A99&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2154.html?id=F4A99&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -105,11 +105,11 @@ function voted(){
 <!-- AddThis Button END --></div></strong></p>
 <p>
 	<font face="Verdana" size="2">
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4A99" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -159,22 +159,22 @@ var idcomments_post_url = 'F4A99.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4A99" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script></strong></p>
-</span><p><a href=index6ee4.html?id=F4A99 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index6ee4.html?id=F4A99 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -235,7 +235,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -257,7 +257,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
